--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -188,6 +188,7 @@ X.XX - YYYY
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.5 with HDRI support.
 - Updated pingo to 0.80b.
+- Updated strip to 2.27.
 - Some minor optimizations and code cleanup.
 
 
