--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -159,7 +159,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.80b - http://css-ig.net/pingo
+- pingo 0.80c - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -181,13 +181,14 @@ X.XX - YYYY
 - New extensions added to the ZIP toolchain: .qwk, .ear, .war, .jar, .z01 .z02 .z03 .z04 .z05 .z06 .z07 .z08 .z09 .z10, .zipx, .zx01 .zx02 .zx03 .zx04 .zx05 .zx05 .zx06 .zx07 .zx08 .zx09 .zx10.
 - Added INI setting MP4CopyMetadata=false to enable copying MP4 metadata.
 - Fixed some help typos (Joel Rangelle).
-- Updated mozjpegtran x86 and x64 binaries, because CoolOppo did not build x64 (thanks d4k0).
+- Improved pingo compression.
 - Added SQLite 3.0.18 x86 and x64 Visual C++ 2017 custom builds.
+- Updated mozjpegtran x86 and x64 binaries, because CoolOppo did not build x64 (thanks d4k0).
 - Updated to ECT 0.7.0 (abf6910) x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Leanify to 0.4.3.190 daily binaries.
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.5 with HDRI support.
-- Updated pingo to 0.80b.
+- Updated pingo to 0.80c.
 - Updated strip to 2.27.
 - Some minor optimizations and code cleanup.
 
