--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -169,7 +169,7 @@ ndo
 - SQLite 3.18.0 - http://www.sqlite.org
 - Tidy 5.4.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
-- UPX 3.93 - https://upx.github.io
+- UPX 3.94 - https://upx.github.io
 - ZLib 1.2.8 - http://www.zlib.net
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
@@ -183,6 +183,7 @@ X.XX - YYYY
 - Fixed some help typos (Joel Rangelle).
 - Improved pingo compression.
 - Added SQLite 3.0.18 x86 and x64 Visual C++ 2017 custom builds.
+- Updated UPX to 3.94.
 - Updated mozjpegtran x86 and x64 binaries, because CoolOppo did not build x64 (thanks d4k0).
 - Updated to ECT 0.7.0 (abf6910) x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Leanify to 0.4.3.190 daily binaries.
