--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -159,7 +159,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.80e - http://css-ig.net/pingo
+- pingo 0.80f - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -189,7 +189,7 @@ X.XX - YYYY
 - Updated Leanify to 0.4.3.190 daily binaries.
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.5 with HDRI support.
-- Updated pingo to 0.80e.
+- Updated pingo to 0.80f.
 - Updated strip to 2.27.
 - Some minor optimizations and code cleanup.
 
