Updated to cppcheck 1.79
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@808 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -193,6 +193,7 @@ X.XX - YYYY
 - Updated ImageMagick 7.0.5.5 with HDRI support.
 - Updated pingo to 0.80f.
 - Updated strip to 2.27.
+- Updated to cppcheck 1.79.
 - Some minor optimizations and code cleanup.
 
 
