--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -1,5 +1,7 @@
 - Embarcadero C++ Builder 10.2 Tokyo, has a bug in the Win64 version when "Link with runtime packages" is set to false. Confirmed a bug: https://board4all.biz/threads/malformed-colorbox-text.658103/#post-1212328
 
+- Add optional toolbar icon menu (trlkly).
+
 - Detect plugin crash after a timeout (FatBit)
 
 - Autoupdate plugins: http://nsis.sourceforge.net/Check_online_for_Updates (olavrb)
