--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -193,7 +193,7 @@ X.XX - YYYY
 - Updated Leanify to 0.4.3.190 daily binaries.
 - Updated ImageWorsener to 1.3.1.
 - Updated ImageMagick 7.0.5.6 with HDRI support.
-- Updated pingo to 0.81d.
+- Updated pingo to 0.81e.
 - Updated strip to 2.27.
 - Updated to cppcheck 1.79.
 - Some minor optimizations and code cleanup.
