--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -144,7 +144,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.5.6 - http://www.imagemagick.org
+- ImageMagick 7.0.5.7 - http://www.imagemagick.org
 - ImageWorsener 1.3.1 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -161,7 +161,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.81d - http://css-ig.net/pingo
+- pingo 0.81e - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -192,7 +192,7 @@ X.XX - YYYY
 - Updated to ECT 0.7.0 (2b66b21) x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Leanify to 0.4.3.190 daily binaries.
 - Updated ImageWorsener to 1.3.1.
-- Updated ImageMagick 7.0.5.6 with HDRI support.
+- Updated ImageMagick 7.0.5.7 with HDRI support.
 - Updated pingo to 0.81e.
 - Updated strip to 2.27.
 - Updated to cppcheck 1.79.
