--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -149,7 +149,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.5.10 - http://www.imagemagick.org
+- ImageMagick 7.0.6.0 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -182,6 +182,7 @@ ndo
 
 
 X.XX - YYYY (5th aniversary release)
+- Updated ImageMagick 7.0.6.0 with HDRI support.
 
 
 9.90 - 2017/06/11
