--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -166,7 +166,7 @@ ndo
 - OptiPNG 0.7.6 - http://optipng.sourceforge.net
 - PCXLite 1.0 - http://sol.gfxile.net/code.html
 - PETrim 4.00 beta - http://pecompact.com/pesuite.php
-- pingo 0.83 - http://css-ig.net/pingo
+- pingo 0.84 - http://css-ig.net/pingo
 - PngOptimizer 2.5 - http://psydk.org/PngOptimizer
 - PNGOUT 02/13/2015 - http://advsys.net/ken/utils.htm
 - pngquant 2.8.1 - http://www.pngquant.org
@@ -182,8 +182,9 @@ ndo
 
 
 X.XX - YYYY (5th aniversary release)
-- Updated SQLite 3.19.3 x86 and x64 Visual C++ 2017 custom builds.
-- Updated ImageMagick 7.0.6.0 with HDRI support.
+- Updated SQLite to 3.19.3 x86 and x64 Visual C++ 2017 custom builds.
+- Updated pingo to 0.84.
+- Updated ImageMagick to 7.0.6.0 with HDRI support.
 
 
 9.90 - 2017/06/11
