--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -3,8 +3,6 @@
 - Would it be possible to also skip the warning message that shows if there are multiple instances of the product running? (What I would like to do is run a few instances of the program in parallel from another tool I'm working on without having to manually click those message boxes away.) (Devedse)
 Devedse 
 
-- Embarcadero C++ Builder 10.2 Tokyo, has a bug in the Win64 version when "Link with runtime packages" is set to false. Confirmed a bug: https://board4all.biz/threads/malformed-colorbox-text.658103/#post-1212328
-
 - Add optional toolbar icon menu (trlkly).
 
 - Detect plugin crash after a timeout (FatBit)
@@ -182,6 +180,8 @@ ndo
 
 
 X.XX - YYYY (5th aniversary release)
+- Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
+- Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
 - Updated SQLite to 3.19.3 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pingo to 0.84.
 - Updated ImageMagick to 7.0.6.0 with HDRI support.
