Added bDisableCache=false INI setting to disable cache of already optimized files, so they are not reoptimized each time.
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@852 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -180,6 +180,7 @@ ndo
 
 
 X.XX - YYYY (5th aniversary release)
+- Added bDisableCache=false INI setting to disable cache of already optimized files, so they are not reoptimized each time.
 - Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
 - Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
 - Updated Leanify to 0.4.3.192 daily binaries.
