--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -181,7 +181,7 @@ ndo
 
 X.XX - YYYY (5th aniversary release)
 - Added EnableCache=false INI setting to enable cache of already optimized files, so they are not reoptimized each time.
-- Added AllowMultipleInstances=false INI setting, to prevent the warning of multiple FileOptimizer instances running.
+- Added AllowMultipleInstances=false INI setting, to prevent the warning of multiple FileOptimizer instances running (Jack).
 - Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
 - Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
 - Updated Leanify to 0.4.3.192 daily binaries.
