--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -184,6 +184,7 @@ X.XX - YYYY (5th aniversary release)
 - Added AllowMultipleInstances=false INI setting, to prevent the warning of multiple FileOptimizer instances running (Jack).
 - Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
 - Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
+- Improved pingo lossy optimizations for JPEG and PNG.
 - Updated pngquant to 2.10.0.
 - Updated to ECT 0.8.0 (764522f) x86 and x64 optimized builds (thanks Malloc Voidstar).
 - Updated Leanify to 0.4.3.192 daily binaries.
@@ -191,6 +192,7 @@ X.XX - YYYY (5th aniversary release)
 - Updated pingo to 0.85.
 - Updated ImageMagick to 7.0.6.0 with HDRI support.
 - Some minor optimizations and code cleanup.
+
 
 9.90 - 2017/06/11
 - Addes SQLite database optimization support (necros).
