--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -185,6 +185,7 @@ X.XX - YYYY (5th aniversary release)
 - Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
 - Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
 - Improved pingo lossy optimizations for JPEG and PNG.
+- Improved gifsicle and gifsicle-lossy performance by allowing using more memory, and using several threads.
 - Updated gifsicle to 1.89 (custom build).
 - Updated pngquant to 2.10.0.
 - Updated to ECT 0.8.0 (764522f) x86 and x64 optimized builds (thanks Malloc Voidstar).
