--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -184,6 +184,7 @@ X.XX - YYYY (5th aniversary release)
 - Added AllowMultipleInstances=false INI setting, to prevent the warning of multiple FileOptimizer instances running (Jack).
 - Compiled with latest C++ Builder 10.2 Tokyo April 2017 Hotfix.
 - Fixed the bug of chineese shortcut text caused by Embarcadero C++ Builder 10.2 Tokyo, issue in the Win64 version when "Link with runtime packages" is set to false.
+- Improved GUI draw performance.
 - Improved pingo lossy optimizations for JPEG and PNG.
 - Improved gifsicle and gifsicle-lossy performance by allowing using more memory, and using several threads.
 - Added nightly builds at the SVN repository, so they can be publicly tested (Jack, Ryan Morben).
