Increased NSIS installer dictionary size to the maximum supported 119MB. FileOptimizerSetup.exe reduced from 101MB to 93MB (maadjordan)
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@882 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -179,6 +179,7 @@ ndo
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 X.XX - YYYY
+- Increased NSIS installer dictionary size to the maximum supported 119MB. FileOptimizerSetup.exe reduced from 101MB to 93MB (maadjordan).
 
 
 10.00 - 2017/07/21 (5th aniversary release)
