--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -147,7 +147,7 @@ ndo
 - Ghostscript 9.21 - http://www.ghostscript.com
 - GNU Strip 2.27 - http://www.gnu.org/software/binutils/
 - Guetzli 1.0.1 - https://github.com/google/guetzli
-- ImageMagick 7.0.6.1 - http://www.imagemagick.org
+- ImageMagick 7.0.6.2 - http://www.imagemagick.org
 - ImageWorsener 1.3.2 - http://entropymine.com/imageworsener
 - jhead 3.00 - http://www.sentex.net/~mwandel/jhead/
 - jpeg-archive 2.1.1 - https://github.com/danielgtaylor/jpeg-archive
@@ -180,6 +180,8 @@ ndo
 
 X.XX - YYYY
 - Increased NSIS installer dictionary size to the maximum supported 119MB. FileOptimizerSetup.exe reduced from 101MB to 93MB (maadjordan).
+- Updated ImageMagick to 7.0.6.2 with HDRI support.
+
 
 
 10.00 - 2017/07/21 (5th aniversary release)
