--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -138,7 +138,7 @@ ndo
 - DeflOpt 2.07 - http://www.walbeehm.com/download/
 - defluff 0.3.2 - http://j-o.users.sourceforge.net
 - Document Press Version 6.01 - http://encode.ru/threads/336-Document-Press-6-01
-- ECT 0.8.2 - https://github.com/fhanau/Efficient-Compression-Tool
+- ECT 0.8.2 (fbb2550)- https://github.com/fhanau/Efficient-Compression-Tool
 - ffmpeg 3.2.4 - http://ffmpeg.zeranoe.com/builds/
 - FLACOUT 07/03/2014 - http://advsys.net/ken/utils.htm
 - Flasm 1.62 - http://flasm.sourceforge.net
@@ -180,6 +180,7 @@ ndo
 
 X.XX - YYYY
 - Increased NSIS installer dictionary size to the maximum supported 119MB. FileOptimizerSetup.exe reduced from 101MB to 93MB (maadjordan).
+- Updated to ECT 0.8.2 (fbb2550) x86 and x64 daily optimized builds (thanks Malloc Voidstar).
 - Updated ImageMagick to 7.0.6.2 with HDRI support.
 
 
