--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -184,6 +184,8 @@ X.XX - YYYY
 - Added Allow Lossy optimizations checkbox in JPEG tab.
 - Reenabled Embarcadero's Luna, Metropolis and Windows 10 themes removed in FileOptimizer 9.10, because they work fine again with Windows 10 Anniversary and later.
 - Fixed version display in About window.
+- Updated to cppcheck 1.80.
+
 
 10.10 - 2017/07/28
 - Increased NSIS installer dictionary size to 216MB thanks to 4gb_patch by NTCore and upgraded to latest NSIS nightly builds. Size reduced from 96MB to 70MB (maadjordan).
