--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -171,7 +171,7 @@ ndo
 - pngrewrite 1.4.0 - http://entropymine.com/jason/pngrewrite
 - pngwolf-zopli 1.1.2 - https://github.com/jibsen/pngwolf-zopfli
 - rehuff - http://wiki.xiph.org/Rehuff
-- SQLite 3.19.3 - http://www.sqlite.org
+- SQLite 3.20.0 - http://www.sqlite.org
 - Tidy 5.4.0 - http://www.html-tidy.org
 - TruePNG 0.6.2.2 - http://x128.ho.ua/pngutils.html
 - UPX 3.94 - https://upx.github.io
@@ -185,6 +185,7 @@ X.XX - YYYY
 - Reenabled Embarcadero's Luna, Metropolis and Windows 10 themes removed in FileOptimizer 9.10, because they work fine again with Windows 10 Anniversary and later.
 - Reduced a bit the quality loss allowed when lossy compression is enabled to improve ratio.
 - Fixed version display in About window.
+- Updated SQLite to 3.20.0 x86 and x64 Visual C++ 2017 custom builds.
 - Updated pngquant to 2.10.1.
 - Updated ImageMagick to 7.0.6.4 with HDRI support.
 - Updated to cppcheck 1.80.
