Add mire file extensions
git-svn-id: svn://svn.code.sf.net/p/nikkhokkho/code/trunk@903 ddd8a7e7-04a1-4c0d-ae79-48073a28b335

--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -190,6 +190,7 @@ X.XX - YYYY
 - Updated pngquant to 2.10.1.
 - Updated ImageMagick to 7.0.6.4 with HDRI support.
 - Updated to cppcheck 1.80.
+- Some minor optimizations and code cleanup.
 
 
 10.10 - 2017/07/28
