--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -179,7 +179,9 @@ ndo
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 X.XX - YYYY
-- Added detected filetype under extension column, when it does not match real extension.
+- Add add folder option (bl3uge).
+- Added detected filetype under extension column in file list, when its extension is not know.
+- Implemented donation reminder for non donating regular users.
 - Added GIF options tab.
 - Added Allow Lossy optimizations checkbox in JPEG tab.
 - Added ImageMagick to the GIF toolchain.
