--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -179,7 +179,7 @@ ndo
 - zRecompress 2.12 - http://nikkhokkho.sourceforge.net/static.php?page=zRecompress
 
 X.XX - YYYY
-- Add add folder option (bl3uge).
+- Added Add folder option (bl3uge).
 - Added detected filetype under extension column in file list, when its extension is not know.
 - Implemented donation reminder for non donating regular users.
 - Added GIF options tab.
