--- a/FileOptimizer/Changelog.txt
+++ b/FileOptimizer/Changelog.txt
@@ -181,6 +181,8 @@ ndo
 X.XX - YYYY
 - Added Add folder option (bl3uge).
 - Added detected filetype under extension column in file list, when its extension is not know.
+- Reworked About window to be more colorful.
+- Added donator information displayed in Information box. You can enter your donator email in Options->Appearance->Donator.
 - Implemented donation reminder for non donating regular users.
 - Added GIF options tab.
 - Added Allow Lossy optimizations checkbox in JPEG tab.
